--- a/src/App.css
+++ b/src/App.css
@@ -631,7 +631,8 @@ section {
   max-height: 350px;
   overflow-y: auto;
   background-color: #fff;
-  border: 1px solid #ccc;
+  /* border: 1px solid #ccc; */
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
   z-index: 10;
   padding: 0;
   margin: 0;
